# LLuMinary

backend/: .gitignore  app.py  backend.md  old_app.py  pyproject.toml
backend/app/: main.py
backend/bot/: BOT_ETH_CONTEXT.py  bot.py  context.py  levenshtein_distance.py  mappings.py  mental_health_support.py  test.py
backend/scrape/: course_reviews.json  course_reviews.py  courses.json
backend/templates/: chat.html
frontend/HeartWare/: README.md  package-lock.json  package.json
frontend/HeartWare/src/: App.vue  main.ts
frontend/HeartWare/src/assets/: base.css  main.css
frontend/HeartWare/src/components/: Audio.vue  Color.vue  Handler.vue  InputArea.vue  MessageArea.vue  Settings.vue
frontend/HeartWare/src/views/: HomeView.vue
