[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["cheeseNA <kurocat2000@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
gpt4all = "^2.0.0"
fastapi = "^0.104.0"
uvicorn = "^0.23.2"
jinja2 = "^3.1.2"
websockets = "^11.0.3"
selenium = "^4.14.0"
beautifulsoup4 = "^4.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
